--- a/views/usuarios.haml
+++ b/views/usuarios.haml
@@ -1,9 +1,9 @@
-.button
-        %a{:href=>"/"}
-                Jugar de nuevo
+%a{:href=>"/"}
+        %img{:src=>"/images/jugar.gif"}
+        
 .message
         %center
-                %h3 Clasificacion
+                %img{:src=>"/images/ranking.gif"}
                 %table
                         %tr
                                 %th
