--- a/views/game.haml
+++ b/views/game.haml
@@ -1,4 +1,23 @@
-.screen
+.barra-superior
+  -if (!usuario)
+    %form{:action=>"/",:method=>"post"}
+      USUARIO
+      %input{:type=>"text",:name=>"usuario[username]"}
+      %input{:type=>"hidden",:name=>"usuario[ganadas]",:value=>"0"}
+      %input{:type=>"hidden",:name=>"usuario[perdidas]",:value=>"0"}
+      %input{:type=>"hidden",:name=>"usuario[jugadas]",:value=>"0"}
+      %input{:type=>"submit",:value=>"ENTRAR"}
+  -else
+    %form{:action=>"/",:method=>"post"}
+      Hola, #{usuario}
+      %input{:type=>"hidden",:value=>"1",:name=>"logout"}
+      %input{:type=>"submit",:value=>"SALIR"}
+      
+.marcador
+  %a{:href=>"/usuarios"}
+    %img{:src=>"/images/ranking.gif"}
+    
+.screen 
   .gameboard
     - HORIZONTALS.each do |row| 
       .gamerow
@@ -7,4 +26,6 @@
             %div{:id => "#{p}", :class => "cell #{b[p]}"}
     .message
       %h1= m
+
+
 
