retoques para heroku

--- a/views/final.haml
+++ b/views/final.haml
@@ -15,7 +15,7 @@
       
 .marcador
   %a{:href=>"/usuarios"}
-    %img{:src=>"/images/ranking.gif"}
+    %img{:src=>"/images/verRanking.gif"}
     
 .gameboard
   - HORIZONTALS.each do |row| 
