--- a/views/game.haml
+++ b/views/game.haml
@@ -15,7 +15,7 @@
       
 .marcador
   %a{:href=>"/usuarios"}
-    %img{:src=>"/images/ranking.gif"}
+    %img{:src=>"/images/verRanking.gif"}
     
 .screen 
   .gameboard
