ultimos detalles visuales

--- a/views/styles.scss
+++ b/views/styles.scss
@@ -101,16 +101,16 @@ body       {
 .barra-superior {
   text-align: right;
   color:black;
-  margin-top:140px;
-  margin-right:105px;
+  margin-top:11%;
+  margin-right:12%;
 }
 
 .marcador {
-  margin-top:40px;
-  margin-left:120px;
+  margin-top:0%;
+  margin-left:10%;
 }
 
 .button {
-  margin-top:150px;
-  margin-left:110px;  
+  margin-top:12%;
+  margin-left:12%;
 }
