--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,12 +71,13 @@ body {
 .barra-superior {
   text-align: right;
   color: black;
-  margin-top: 100px;
-  margin-right: 95px; }
+  margin-top: 11%;
+  margin-right: 12%; }
 
 .marcador {
-  margin-left: 90px; }
+  margin-top: 0%;
+  margin-left: 10%; }
 
 .button {
-  margin-top: 110px;
-  margin-left: 90px; }
+  margin-top: 12%;
+  margin-left: 12%; }
