--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,11 +52,11 @@ body {
   background-color: #99ff66; }
 
 .cross {
-  background: url("/images/cross.gif") no-repeat;
+  background: url("/images/cruz.gif") no-repeat;
   background-size: cover; }
 
 .circle {
-  background: url("/images/circle.gif") no-repeat;
+  background: url("/images/circulo.gif") no-repeat;
   background-size: cover; }
 
 .base-font, .message {
