--- a/views/styles.scss
+++ b/views/styles.scss
@@ -28,8 +28,8 @@ $cell-margin:  $cell-width/12;
 $cell-padding:  $cell-width/1.3;
 
 $background: "/images/blackboard.jpg";
-$cross:      "/images/cross.gif";
-$circle:     "/images/circle.gif";
+$cross:      "/images/cruz.gif";
+$circle:     "/images/circulo.gif";
 
 body       { 
              // background-color: lightgrey; 
