--- a/views/final.haml
+++ b/views/final.haml
@@ -5,11 +5,12 @@
       %input{:type=>"text",:name=>"usuario[username]"}
       %input{:type=>"hidden",:name=>"usuario[ganadas]",:value=>"0"}
       %input{:type=>"hidden",:name=>"usuario[perdidas]",:value=>"0"}
+      %input{:type=>"hidden",:name=>"usuario[empatadas]",:value=>"0"}
       %input{:type=>"hidden",:name=>"usuario[jugadas]",:value=>"0"}
       %input{:type=>"submit",:value=>"Entrar"}
   -else
     %form{:action=>"/",:method=>"post"}
-      Hola, #{usuario}
+      Usted se ha identificado como #{usuario}
       %input{:type=>"hidden",:value=>"1",:name=>"logout"}
       %input{:type=>"submit",:value=>"Cerrar sesión"}
       
